2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Make formatting more consistent.
	* include/mageec/SQLQuery.h: Likewise.
	* include/mageec/Util.h: Likewise.
	* lib/Database.cpp: Likewise.
	* lib/Driver.cpp: Likewise.
	* lib/ML/FileML.cpp: Likewise.
	* lib/SQLQuery.cpp: Likewise.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/SQLQuery.h (SQLQuery::execute): Rename to exec
	* lib/SQLQuery.cpp (SQLQuery::execute): Likewise.
	* lib/Database.cpp: Use SQLQuery::exec instead of 'execute'

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Rename DatabaseQuery.cpp to SQLQuery.cpp
	* include/mageec/Database.h: Use SQLQuery, SQLQueryBuilder, and
	SQLType instead of DatabaseQuery, DatabaseQueryBuilder and
	QueryParamType.
	* lib/Database.cpp: Likewise.
	* include/mageec/DatabaseQuery.h: Rename to SQLQuery.h.
	* include/mageec/mageec/SQLQuery.h: Added file.
	* lib/mageec/DatabaseQuery.cpp: Rename to SQLQuery.cpp.
	* lib/mageec/SQLQuery.cpp: Added file.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* lib/ML/C5.cpp: Correct field name for the target parameter in the
	.names field for the C5 machine learner.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* lib/Database.cpp: Readd FeatureType and ParameterType tables.
	These are needed by the machine learner when training.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h: Use a string for metric parameters.
	(Database::getFeatures Database::getParameters): Added functions.
	(ResultIterator::ResultIterator): Pass in Database& as well as the
	sqlite3 database connection.
	(ResultIterator::m_db): Change type from sqlite3* to Database*.
	* include/mageec/TrainedML.h: Use a string to represent metric.
	* lib/Database.cpp: Use a string to represent metric in the
	database.
	(Database::getFeatures Database::getParameters): Added functions.
	(ResultIterator::ResultIterator): Pass in Database& as well as the